--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,8 +35,8 @@
     "lucide-react": "^0.454.0",
     "next": "^16.1.1",
     "nodemailer": "^6.9.16",
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
     "react-hook-form": "^7.53.1",
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
